# cmake_project

./: .gitignore  CMakeLists.txt  README.md
include/: Foo.hpp
src/: Foo.cpp  main.cpp
test/: CMakeLists.txt  test_foo.cpp  test_main.cpp
